# brainmuck.rs

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml
crates/core/: Cargo.toml
crates/core/src/: bytecode.rs  codegen.rs  errors.rs  ir.rs  jit.rs  lib.rs  parsing.rs  program.rs
crates/core/src/asm/: aarch64.rs
crates/mmap_jit/: Cargo.toml
crates/mmap_jit/src/: examples.rs  executable_region.rs  mapped_region.rs  writable_region.rs
src/: bytecode.rs  codegen.rs  error.rs  errors.rs  examples.rs  executable_region.rs  ir.rs  jit.rs  lib.rs  main.rs  mapped_region.rs  optimize.rs  parsing.rs  writable_region.rs
src/asm/: aarch64.rs
