[package]
name = "brainmuck"
authors = ["Eddie Antonio Santos <hello@eddieantonio.ca>"]
description = "optimizing Brainfuck JIT interpreter"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "crates/core",
    "crates/mmap_jit",
]

[dependencies]
brainmuck_core = { path = "crates/core" }
structopt = "0.3.25"
